# fiability-back

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  app.py  pyproject.toml  release-notes.md
ai/: prediction_model.py  python_helper.py  topic_model.py
ai/notebooks/: fiability_model_retrain.ipynb  fiability_model_selection.ipynb
ai/pickle/: dictionary_LDA.pkl  model_topic.pkl
aws_deployment/ami/: ami.yml  build-ami.json
aws_deployment/app/: app.tf
aws_deployment/infra/: infra.tf
db/: mysql_db.sql
entities/data/: EntryData.py  SourceData.py  TrendData.py
entities/models/: BaseModel.py  Entry.py  Source.py  Trend.py
repositories/: entry_repository.py  source_repository.py  trend_repository.py
routes/: checker_route.py  entries_route.py  topics_route.py
services/: checker_service.py  constants_service.py  crawler_service.py  entries_service.py  request_service.py  response_service.py
templates/: .aws-clean-fiability-back.yml  .aws-deploy-fiability-back.yml  .docker-release-fiability-back.yml
tests/: BaseEntryTest.py  BaseRepositoryTest.py
tests/integration/: BaseCheckerTest.py  test_checker_endpoint_400_body.py  test_checker_endpoint_workflow.py  test_checker_service.py  test_entries_endpoint.py
tests/unit/: test_accuracy.py  test_article_validity.py  test_base_model.py  test_checker_input_validity.py  test_crawler.py  test_response.py
tests/unit/data/: accuracy_test_data.csv
tests/unit/repository/: test_entry_repository.py  test_source_repository.py  test_trend_repository.py
